--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -28,12 +28,12 @@
 %\extrainfo{}
 \extrainfo{
 	Budapest, Hungary \faHome{}\\
-	\weblink{bajczi@mit.bme.hu}{bajczi@mit.bme.hu} \faEnvelope{}\\
+	\weblink{mailto:bajczi@mit.bme.hu}{bajczi@mit.bme.hu} \faEnvelope{}\\
 	\weblink{http://leventebajczi.github.io}{leventebajczi.github.io \faGlobe{}}\\
 	\weblink{http://github.com/leventeBajczi}{leventeBajczi \faGithub{}}\\
 	\weblink{https://www.linkedin.com/in/leventebajczi/}{leventebajczi \faLinkedin{}}\\
 	% \weblink{https://twitter.com/bajczilevi}{bajczilevi \faTwitterSquare{}}\\
-	\weblink{https://orcid.org/my-orcid?orcid=0000-0002-6551-5860}{0000-0002-6551-5860 \faOrcid{}}
+	\weblink{https://orcid.org/0000-0002-6551-5860}{0000-0002-6551-5860 \faOrcid{}}
 }
 
 \setlength{\fboxsep}{0pt}
