added orcid, removed long link

--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -121,7 +121,7 @@
 Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'ar}
 {}{}{}
 %
-\cvitem{Full lists}{\weblink{https://leventebajczi.github.io/publications.html}{\faExternalLink*{}\small leventebajczi.github.io/publications.html}\hspace{1cm} \weblink{https://scholar.google.com/citations?user=WDQ2jg4AAAAJ}{\faGraduationCap{}\small scholar.google.com/citations?user=WDQ2jg4AAAAJ}}
+\cvitem{Full lists}{\weblink{https://leventebajczi.github.io/publications.html}{\faExternalLink*{}\small leventebajczi.github.io/publications.html}\hspace{1cm} \weblink{https://scholar.google.com/citations?user=WDQ2jg4AAAAJ}{\faGraduationCap{}\small WDQ2jg4AAAAJ}\hspace{1cm} \weblink{https://orcid.org/0000-0002-6551-5860}{\faOrcid{}\small 0000-0002-6551-5860}}
 
 \section{\faUniversity{} Academic Activities and Services}
 % \cvitem{PC member}{%
