added level to ocsmp

--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -81,7 +81,7 @@
 %
 \section{\faCogs{} Certifications}
 \cventry{2021}%
-{\weblink{https://www.omg.org/ocsmp}{OMG-OCSMP}}%
+{\weblink{https://www.omg.org/ocsmp}{OMG-OCSMP Model User}}%
 {}{}{}{Demonstrating the ability to interpret and understand basic MBSE concepts along with SysML models.}
 %
 \section{\faLightbulb{} Skills and Interests}
