Added service updates

--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -142,13 +142,20 @@ Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'a
 % 	\weblink{https://tap.sosy-lab.org/2020/}{TAP'20},
 % 	\weblink{https://popl20.sigplan.org/home/VMCAI-2020}{VMCAI'20}%
 % }
+\cvitem{Reviewer}{%
+	\weblink{https://sv-comp.sosy-lab.org/2023/}{TACAS'23 (SV-COMP)},
+	\weblink{https://formalise2023.github.io/}{FormaliSE'23},
+	\weblink{https://www.csaeconf.org/2023}{CSAE'23}%
+}
 \cvitem{Subreviewer}{%
 	\weblink{https://issre2022.github.io/}{ISSRE-W'22},
 	\weblink{https://vmcai-2023.github.io/}{VMCAI'23}%
 }
 \cvitem{AE}{%
 	\weblink{https://sv-comp.sosy-lab.org/2022/}{TACAS'22 (SV-COMP)},
-	\weblink{http://i-cav.org/2022/}{CAV'22}%
+	\weblink{https://sv-comp.sosy-lab.org/2023/}{TACAS'23 (SV-COMP)},
+	\weblink{http://i-cav.org/2022/}{CAV'22},
+	\weblink{http://i-cav.org/2023/}{CAV'23}%
 }
 
 \section{\faBook{} Teaching}
