--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -145,7 +145,9 @@ Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'a
 	\weblink{https://sv-comp.sosy-lab.org/2022/}{TACAS'22 (SV-COMP)},
 	\weblink{https://sv-comp.sosy-lab.org/2023/}{TACAS'23 (SV-COMP)},
 	\weblink{http://i-cav.org/2022/}{CAV'22},
-	\weblink{http://i-cav.org/2023/}{CAV'23}%
+	\weblink{http://i-cav.org/2023/}{CAV'23},
+	\weblink{https://formalise2024.github.io/}{FormaliSE'24},
+	\weblink{https://etaps.org/2024/}{ESOP/FASE/FoSSaCS'24}%
 }
 
 \section{\faBook{} Teaching}
