--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -95,7 +95,9 @@
 \cvitem{Research}{Formal methods, model checking, systems engineering, SAT/SMT, compilers}
 \cvitem{Development}{Java, Kotlin, Python, C, C++, Shell, Git, CI/CD}
 \cvitem{Tools}{%
-	\weblink{https://github.com/ftsrg/theta}{Theta \faGithub}
+	\weblink{https://github.com/ftsrg/theta}{Theta \faGithub{} (maintainer)},
+	\weblink{https://github.com/sosy-lab/benchexec}{Benchexec \faGithub{} (contributor)},
+	\weblink{https://github.com/sosy-lab/java-smt}{JavaSMT \faGithub{} (contributor)}
 }
 \cvitem{Languages}{Hungarian (native), English (advanced), German (conversational)}
 
@@ -128,10 +130,17 @@
 Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'ar}
 {}{}{}
 %
+\cventry{SPIN'24}%
+{Solving Constrained Horn Clauses as C Programs with CHC2C}%
+{\weblink{https://ftsrg.mit.bme.hu/paper-tacas24-chc2c/paper.pdf}{\faFile*[regular]}\newline{}
+\underline{L.~Bajczi}, V.~Moln\'ar}
+{}{}{}
+%
 \cvitem{Full lists}{\weblink{https://leventebajczi.github.io/publications.html}{\faExternalLink*{}\small leventebajczi.github.io/publications.html}\hspace{1cm} \weblink{https://scholar.google.com/citations?user=WDQ2jg4AAAAJ}{\faGraduationCap{}\small WDQ2jg4AAAAJ}\hspace{1cm} \weblink{https://orcid.org/0000-0002-6551-5860}{\faOrcid{}\small 0000-0002-6551-5860}}
 
 \section{\faUniversity{} Academic Activities and Services}
 \cvitem{PC member}{%
+	\weblink{https://sv-comp.sosy-lab.org/2024/}{TACAS'24 (SV-COMP)},
 	\weblink{https://sv-comp.sosy-lab.org/2023/}{TACAS'23 (SV-COMP)},
 	\weblink{https://formalise2023.github.io/}{FormaliSE'23},
 	\weblink{https://www.csaeconf.org/2023}{CSAE'23}%
@@ -142,8 +151,9 @@ Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'a
 	\weblink{https://sbmf23.ufam.edu.br/}{SBMF'23}%
 }
 \cvitem{AE}{%
-	\weblink{https://sv-comp.sosy-lab.org/2022/}{TACAS'22 (SV-COMP)},
+	\weblink{https://sv-comp.sosy-lab.org/2024/}{TACAS'24 (SV-COMP)},
 	\weblink{https://sv-comp.sosy-lab.org/2023/}{TACAS'23 (SV-COMP)},
+	\weblink{https://sv-comp.sosy-lab.org/2022/}{TACAS'22 (SV-COMP)},
 	\weblink{http://i-cav.org/2022/}{CAV'22},
 	\weblink{http://i-cav.org/2023/}{CAV'23},
 	\weblink{https://formalise2024.github.io/}{FormaliSE'24},
@@ -160,6 +170,6 @@ Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'a
 	Databases~$\cdot$
 	Digital~Technology%
 }
-% \cvitem{Students}{Advising 2 BSc Students}
+\cvitem{Students}{Advising 3 MSc students on abstraction-based software verification}
 
 \end{document}
