--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -139,6 +139,9 @@ Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'a
 \cvitem{Full lists}{\weblink{https://leventebajczi.github.io/publications.html}{\faExternalLink*{}\small leventebajczi.github.io/publications.html}\hspace{1cm} \weblink{https://scholar.google.com/citations?user=WDQ2jg4AAAAJ}{\faGraduationCap{}\small WDQ2jg4AAAAJ}\hspace{1cm} \weblink{https://orcid.org/0000-0002-6551-5860}{\faOrcid{}\small 0000-0002-6551-5860}}
 
 \section{\faUniversity{} Academic Activities and Services}
+\cvitem{Reviewer (journal)}{%
+	\weblink{https://www.elsevier.marketing/journal/Science-of-Computer-Programming}{SCP}%
+}
 \cvitem{PC member}{%
 	\weblink{https://sv-comp.sosy-lab.org/2024/}{TACAS'24 (SV-COMP)},
 	\weblink{https://sv-comp.sosy-lab.org/2023/}{TACAS'23 (SV-COMP)},
