--- a/src/leventebajczi_cv_en.tex
+++ b/src/leventebajczi_cv_en.tex
@@ -105,7 +105,9 @@
 \newpage
 
 \section{\faTrophy{} Awards and Scholarships}
-\cventry{2019--2023}{"ÚNKP" Research Scholarship}{}{}{}{}
+\cventry{2024}{Pro Scientia Gold Medal}{}{}{}{}
+\cventry{2023--2025}{"DKÖP" Research Scholarship}{}{}{}{}
+\cventry{2019--2025}{"ÚNKP" Research Scholarship}{}{}{}{}
 \cventry{2019--2022}{National Academic Scholarship}{}{}{}{}
 \cventry{2018--2021}{Scholarship of the Faculty of BME-VIK}{}{}{}{}
 \cventry{2019, 2021}{First place at the National Scientific Students' Associations Conference}{}{}{}{}
@@ -117,30 +119,40 @@
 \cventry{2017}{Grant from the Human Capacities Grant Management Office}{}{}{}{}
 \cventry{2016--2018}{Scholarship from the Richter Gedeon Talentum Foundation}{}{}{}{}
 
-\section{\faFile*[regular]{} Selected Publications}
-\cventry{ACM TECS 2019}%
-{Will My Program Break on This Faulty Processor? Formal Analysis of Hardware Fault Activations in Concurrent Embedded Software}%
-{\weblink{https://leventebajczi.github.io/publications/emsoft19.pdf}{\faFile*[regular]}\newline{}
-\underline{L.~Bajczi}, A.~V\"or\"os, V.~Moln\'ar}
-{}{}{}
-%
-\cventry{TACAS'22}%
-{Theta: portfolio of CEGAR-based analyses with dynamic algorithm selection (Competition Contribution)}%
-{\weblink{https://leventebajczi.github.io/publications/tacas22.pdf}{\faFile*[regular]}\newline{}
-Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'ar}
-{}{}{}
-%
+\section{\faFile*[regular]{} Selected Publications}%
+\cventry{SoSyM}%
+{NetworCat: applying analysis techniques of shared memory software on message-passing distributed systems}%
+{\weblink{https://leventebajczi.github.io/publications/sosym25networcat.pdf}{\faFile*[regular]}\newline{}%
+\underline{L.~Bajczi}, V.~Moln\'ar}%
+{}{}{}%
+\cventry{TACAS'25}%
+{On Stability in a Happens-Before Propagator for Concurrent Programs (Reproducibility Study)}%
+{\weblink{https://leventebajczi.github.io/publications/tacas25ocfix.pdf}{\faFile*[regular]}\newline{}%
+\underline{L.~Bajczi}, Cs.~Telbisz, D.~Szekeres, A.~V\"or\"os}%
+{}{}{}%
 \cventry{SPIN'24}%
 {Solving Constrained Horn Clauses as C Programs with CHC2C}%
-{\weblink{https://ftsrg.mit.bme.hu/paper-tacas24-chc2c/paper.pdf}{\faFile*[regular]}\newline{}
-\underline{L.~Bajczi}, V.~Moln\'ar}
-{}{}{}
-%
+{\weblink{https://leventebajczi.github.io/publications/spin24chc2c.pdf}{\faFile*[regular]}\newline{}%
+\underline{L.~Bajczi}, V.~Moln\'ar}%
+{}{}{}%
+\cventry{FormaliSE'22}%
+{C for Yourself: Comparison of Front-End Techniques for Formal Verification}%
+{\weblink{https://leventebajczi.github.io/publications/formalise22.pdf}{\faFile*[regular]}\newline{}%
+\underline{L.~Bajczi}, Zs.~\'Ad\'am, V.~Moln\'ar}%
+{}{}{}%
+\cventry{ACM TECS}%
+{Will My Program Break on This Faulty Processor?}%
+{\weblink{https://leventebajczi.github.io/publications/emsoft19.pdf}{\faFile*[regular]}\newline{}%
+\underline{L.~Bajczi}, A.~V\"or\"os, V.~Moln\'ar}%
+{}{}{}%
 \cvitem{Full lists}{\weblink{https://leventebajczi.github.io/publications.html}{\faExternalLink*{}\small leventebajczi.github.io/publications.html}\hspace{1cm} \weblink{https://scholar.google.com/citations?user=WDQ2jg4AAAAJ}{\faGraduationCap{}\small WDQ2jg4AAAAJ}\hspace{1cm} \weblink{https://orcid.org/0000-0002-6551-5860}{\faOrcid{}\small 0000-0002-6551-5860}}
 
 \section{\faUniversity{} Academic Activities and Services}
 \cvitem{Reviewer (journal)}{%
 	\weblink{https://www.elsevier.marketing/journal/Science-of-Computer-Programming}{SCP}%
+}
+\cvitem{Local chair}{%
+	\weblink{https://otdk25.vik.bme.hu/}{OTDK'25}%
 }
 \cvitem{PC member}{%
 	\weblink{https://sv-comp.sosy-lab.org/2024/}{TACAS'24 (SV-COMP)},
@@ -151,7 +163,8 @@ Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'a
 \cvitem{Subreviewer}{%
 	\weblink{https://issre2022.github.io/}{ISSRE-W'22},
 	\weblink{https://vmcai-2023.github.io/}{VMCAI'23},
-	\weblink{https://sbmf23.ufam.edu.br/}{SBMF'23}%
+	\weblink{https://sbmf23.ufam.edu.br/}{SBMF'23},
+	\weblink{https://etaps.org/2025/conferences/fase/}{FASE'25}%
 }
 \cvitem{AE}{%
 	\weblink{https://sv-comp.sosy-lab.org/2024/}{TACAS'24 (SV-COMP)},
@@ -160,7 +173,9 @@ Zs. \'{A}dam, \underline{L.~Bajczi}, M.~Dobos-Kov\'acs, \'{A}. Hajdu, V.~Moln\'a
 	\weblink{http://i-cav.org/2022/}{CAV'22},
 	\weblink{http://i-cav.org/2023/}{CAV'23},
 	\weblink{https://formalise2024.github.io/}{FormaliSE'24},
-	\weblink{https://etaps.org/2024/}{ESOP/FASE/FoSSaCS'24}%
+	\weblink{https://conf.researchr.org/home/Formalise-2025}{Formalise'25},
+	\weblink{https://etaps.org/2024/}{ESOP/FASE/FoSSaCS'24},
+	\weblink{https://spin-web.github.io/SPIN2025/}{SPIN'25}%
 }
 
 \section{\faBook{} Teaching}
